[package]
name = "compiler_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anki_ft_lexer = { path = "../anki_ft_lexer" }
anki_ft_parse = { path = "../anki_ft_parse" }
anki_ft_codegen = { path = "../anki_ft_codegen" }
strum = "0.25.0"
